js/js.translator/testData/incremental/invalidation/fakeOverrideInheritance/lib1/A.0.kt
abstract class AbstractClassA {
    inline fun funA() = "a-0"
}
